[gd_scene load_steps=3 format=3 uid="uid://by5hdqdfv2q0b"]

[ext_resource type="Script" uid="uid://362owyvbxg64" path="res://ending.gd" id="1_fsb5k"]
[ext_resource type="FontFile" uid="uid://cvdyr6ucfpivc" path="res://Orbitron-VariableFont_wght.ttf" id="2_dmh3q"]

[node name="Ending" type="CanvasLayer"]
script = ExtResource("1_fsb5k")

[node name="Background" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 1)

[node name="EndingText" type="RichTextLabel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_fonts/normal_font = ExtResource("2_dmh3q")
theme_override_font_sizes/normal_font_size = 32

[node name="RestartButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
theme_override_colors/font_color = Color(1, 1, 1, 1)

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
